--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,9 +1,9 @@
 header.header
   nav.nav.nav--tours
-    a.nav__el(href='#') All tours
+    a.nav__el(href='/') All tours
   //- '.' will automatically create div block
-  .header_logo
-    img(src='img/logo-white.png' alt='Natours logo')
+  .header__logo
+    img(src='/img/logo-white.png' alt='Natours logo')
   nav.nav.nav--user
     //- a.nav__el(href='#') My bookings
     //- a.nav__el(href='#')
